@@ -118,6 +118,7 @@ void LogListModel::update()
   if((err=RD_ListLogs(&logs,cnf->serverHostname().toUtf8(),
 		      cnf->serverUsername().toUtf8(),
 		      cnf->serverPassword().toUtf8(),
+		      cnf->serverTicket().toUtf8(),
 		      service_name.toUtf8(),"",false,&numrecs))==0) {
     if(model_log_names.size()>0) {
       beginRemoveRows(QModelIndex(),0,model_column_fields.size()-1);
